MockDonalds runs on ART x86_64: Activity lifecycle + 60fps render loop
Agent A achieved full MockDonalds execution on x86_64 ART:
- MenuActivity onCreate/onStart/onResume lifecycle complete
- 600+ frames rendered at ~60fps
- 169 OHBridge JNI methods auto-generated and working
- ZipFile, Math, UnixFileSystem natives implemented
- ARM64 QEMU blocked by emulation speed (~100x overhead)